--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,21 @@ li {
     opacity: 90%;
     padding-left: 5px;
 }
-    
+ 
+li::first-letter{
+    text-transform: capitalize;
+}
+
+#list-time{
+    font-size: 12px;
+}
+#description{
+    font-size: 12px;
+}
+
+.last{
+    font-size: 12px;
+}
 
 .date {
     padding-left: 6px;
