Implemented the units conversion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,11 @@ a:hover {
     padding-bottom: 129px;
 }
 
+.weather-temperature .active{
+    color: black;
+    cursor: default;
+}
 
-/* a:visited {
+.weather-temperature .active:hover{
    text-decoration: none;
-} */
+}
