--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,19 +34,20 @@ li {
     opacity: 90%;
     padding-left: 5px;
 }
- 
-li::first-letter{
+
+li::first-letter {
     text-transform: capitalize;
 }
 
-#list-time{
-    font-size: 12px;
-}
-#description{
+#list-time {
     font-size: 12px;
 }
 
-.last{
+#description {
+    font-size: 12px;
+}
+
+.last {
     font-size: 12px;
 }
 
@@ -82,7 +83,7 @@ li::first-letter{
     border-radius: 24px;
     border: 1px solid #fff;
     max-width: 550px;
-    margin-bottom: 9px;
+    margin-bottom: 19px;
 }
 
 .city-main {
@@ -96,7 +97,7 @@ li::first-letter{
 .weather-icon1 {
     width: 78px;
     height: 78px;
-    margin-right: 9px;
+    margin-right: -4px;
     margin-left: -7px;
     margin-bottom: 24px;
 }
@@ -135,11 +136,15 @@ a:hover {
     padding-bottom: 129px;
 }
 
-.weather-temperature .active{
+.weather-temperature .active {
     color: black;
     cursor: default;
 }
 
-.weather-temperature .active:hover{
-   text-decoration: none;
+.weather-temperature .active:hover {
+    text-decoration: none;
+}
+
+.weatherss {
+    padding-left: 55px;
 }
