--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ li::first-letter {
     border-radius: 24px;
     border: 1px solid #fff;
     max-width: 550px;
-    margin-bottom: 19px;
+    margin-bottom: 20px;
 }
 
 .city-main {
@@ -129,12 +129,12 @@ a:hover {
 }
 
 .source-code {
-    font-size: 90%;
+    font-size: 83%;
     font-weight: 400;
-    margin: 0 auto;
+    margin: -15px auto;
     max-width: 550px;
     text-align: left;
-    padding-bottom: 129px;
+    padding-bottom: 170px;
 }
 
 .weather-temperature .active {
