--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
     font-family: "Montserrat", sans-serif;
-    background: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
+    background-image: url("/assets/images/bckg.jpg");
 }
+
 
 current-weather-icon {
     margin-top: 4px;
@@ -77,13 +78,11 @@ li::first-letter {
 
 .container {
     margin-top: 70px;
-    width: 700px;
     padding: 40px;
-    background: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
     box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
     border-radius: 24px;
     border: 1px solid #fff;
-    max-width: 550px;
+    max-width: 600px;
     margin-bottom: 20px;
 }
 
