--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@ body {
     background-image: url("/assets/images/bckg.jpg");
 }
 
-
 current-weather-icon {
     margin-top: 4px;
 }
@@ -19,7 +18,6 @@ h1 {
     color: #092238;
     font-size: 35px;
     font-weight: 600;
-    margin-left: 37px;
 }
 
 h2 {
@@ -67,14 +65,12 @@ li::first-letter {
     margin-bottom: 40px;
 }
 
-
 .forecaster {
     display: block;
     text-align: center;
     background-color: transparent;
     border: none;
 }
-
 
 .container {
     margin-top: 70px;
@@ -132,7 +128,7 @@ a:hover {
     font-weight: 400;
     margin: -15px auto;
     max-width: 550px;
-    text-align: left;
+    text-align: center;
     padding-bottom: 170px;
 }
 
@@ -149,6 +145,10 @@ a:hover {
     padding-left: 55px;
 }
 
-.forecaster-temp{
+.forecaster-temp {
     font-size: 12px;
+}
+
+.about {
+    padding: 0;
 }
