--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,3 +152,44 @@ a:hover {
 .about {
     padding: 0;
 }
+
+@media (max-width: 574px ) {
+    img {
+        vertical-align: middle;
+        }
+    div {
+        display: inline;
+        }
+    h1 {
+        font-size: 25px;
+        text-align: center;
+        }
+    #description {
+        text-align: center;
+        font-size: 15px;
+        }
+
+        #city-input{
+            margin-left: 10px;
+        }
+
+        #search-btn{
+            margin: 0 -9px;
+        }
+
+    .temperature {
+    font-size: 60px;
+        }
+     .last {
+        text-align: center;
+        font-size: 15px;
+        }
+
+   .units {
+       position: relative;
+       top: 1px;
+       left: -6px;
+       display: flex;
+   }
+   
+}
