css styling for mobile responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,14 @@ a:hover {
     padding: 0;
 }
 
+
 @media (max-width: 574px ) {
+
+    .forecaster {
+    display: inline;
+    margin: 0 auto;
+    font-size: 15px;
+}
     img {
         vertical-align: middle;
         }
@@ -191,5 +198,16 @@ a:hover {
        left: -6px;
        display: flex;
    }
+
+   .col-2{
+    display: flex;
+
+   }
+
+   body {
+    font-family: auto;
+    margin: 12px;
+    font-size: 100%;
+}
    
 }
