--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,8 +204,13 @@ a:hover {
 
    }
 
+   .container{
+    padding: 0;
+    margin: 0;
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+}
+
    body {
-    font-family: auto;
     margin: 12px;
     font-size: 100%;
 }
